# telesecure

./: CMakeLists.txt  LICENSE  README.md  application.cpp  bez nazwy.code-workspace
include/: util.hpp
include/app/: tele_app.hpp  telegram_cli.hpp
include/gui/: chat_doc.hpp  chat_view.hpp  curses_coord.h  edit_box.hpp  status_bar.hpp  utility.hpp  window.hpp  window_driver_context.hpp  window_manager.hpp
include/input/: Console.hpp  input_manager.hpp
modules/: FindReadline.cmake
src/: application.cpp  util.cpp
src/app/: tele_app.cpp  telegram_cli.cpp
src/gui/: chat_doc.cpp  chat_view.cpp  edit_box.cpp  status_bar.cpp  utility.cpp  window.cpp  window_driver_context.cpp  window_manager.cpp
src/input/: Console.cpp  input_manager.cpp
tdlib/: db.sqlite  db.sqlite-shm  db.sqlite-wal  td.binlog
